@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-07-09:
+
+- Fixed a bug that broke '[[ ... ]]' test expressions for the command
+  following a syntax error in an associative array assignment.
+
 2022-07-05:
 
 - Fixed a spurious syntax error on encountering a process substitution
